# PersonalOS

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  personalos.toml  pyproject.toml
.github/workflows/: ci.yml
cli/personalos/: __init__.py  __main__.py  cli.py  config.py  entities.py  generators.py  ids.py  main.py  validator.py  workspace.py
docs/: architecture.md  blueprint.md  quickstart.md  schema.md
entities/applications/: acme-corp-frontend.md
entities/contacts/: alex-designer.md  jordan-engineer.md
entities/decisions/: choose-static-first-portfolio-stack.md  keep-habit-tracker-private-first.md  ship-vertical-slice-before-breadth.md  solo-vs-product.md
entities/projects/: local-habit-tracker.md  open-source-cli-tool.md  portfolio-site-refresh.md  starter-workspace-launch.md
entities/reviews/: 2026-w14.md
entities/tasks/: capture-case-study-screenshots.md  compare-offline-sync-options.md  define-habit-check-in-flow.md  design-habit-tracker-schema.md  draft-homepage-positioning.md  publish-quickstart-and-golden-tests.md  ship-landing-page-copy.md  write-cli-readme.md
entities/tools/: claude.md  figma.md  linear.md
exports/context/: full-context.json
schema/: _base.schema.json  application.schema.json  base.schema.json  contact.schema.json  decision.schema.json  project.schema.json  review.schema.json  task.schema.json  tool.schema.json
tests/: conftest.py  test_cli.py  test_generation.py  test_golden.py  test_schema.py  test_validation.py
views/: dashboard.example.md  dashboard.md  graph.mmd
(+26 files in other folders)
