[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "personalos"
version = "0.1.0"
description = "A markdown-first personal operating system CLI."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0",
    "jsonschema>=4.20",
    "python-ulid>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
personalos = "cli.personalos.main:app"

[tool.setuptools.packages.find]
include = ["cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
