[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personalos"
version = "0.1.0"
description = "A public-safe markdown-first personal operating system starter."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "jsonschema>=4.22.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
personalos = "personalos.cli:main"

[tool.setuptools]
package-dir = { "" = "cli" }

[tool.setuptools.packages.find]
where = ["cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
